kbase-extension/static/kbase/css/kbaseNarrative.css
/* ... */
.kb-overlay-active {
    background-color: gray;
    border-bottom: 6px solid gray;
    border-top: 6px solid gray;
}

.kb-side-header:hover {
    border-bottom: 6px solid #10CE34;
}

.kb-side-header.active {
    border-bottom: 6px solid #10CE34;
    color: #fff;
    cursor: auto;
}

.kb-side-separator {
    border-bottom: 5px solid #CECECE;
}



.kb-side-tab.active {
    display: inherit;
}
.kb-side-tab {
    display: none;
    height:100%;
}
.kb-narr-side-panel-set{
    height:100%;

}

.kb-overlay-dimmer {
    position: fixed;
    z-index: 10;
    right: 0;
    bottom: 0;
    opacity: 0.5;
    background-color: #000;
}

#data-header {
    padding: 10px 0;
    color: #fff;
    font-weight: bold;
    background-color: #099;
}

#data-title {
    text-align: center;
}

#data-add-btn {
    padding: 0 0 -10px 0;
    position: absolute;
    right: 7px;
    font-size: 0.8em;
}

#data-add-btn:hover {
    color:#000;
}

#data-tab-nav {
    border-bottom: 1px solid #aaa;
    padding-top: 10px;
    background-color: #0bb;
    width: 100%;
}

#data-tab-nav ul {
    padding-bottom: 0;
    bottom: 0px;
    top: 50px;
}

#data-tab-nav ul li {
    display: inline;
    border: 1px solid black;
    padding: 4px 10px;
    background-color: #ddd;
}

#data-tab-nav ul li a:hover {
    text-decoration: none;
    color: #a00;
}

#data-tab-nav ul li a {
    color: #000;
}

#data-tab-nav ul li.selected {
    background-color: #fff;
}

#data-view-panel {
    height: 150px;
    border: 1px solid #aaa;
    padding: 10px;
    overflow-y: auto;
}

#data-pane {
    height: 69%;
    margin-top: 1px;
    border-bottom: 1px solid #AAA;
    overflow: auto;
}
#data-pane p{
    margin: 0px 0;
}
#data-pane p span{
    display: block;
    padding: 2px 10px;
    color: #fff;
    border: 1px solid #fff;
    width: 123px;
    margin: 0;
    text-align: center;
}
#data-pane p span.tab1{
    float: right;
    background: -moz-linear-gradient(top, #666, #bbb);
    background: -webkit-linear-gradient(top, #666, #bbb);
    color: #fff;
}
#data-pane p span.tab2{
    background: -moz-linear-gradient(top, #ccc, #999);
    background: -webkit-linear-gradient(top, #ccc, #999);
}
#function-pane {
    height: 30%;
    margin-top: 1px;
    overflow: auto;
}

.left-pane {
    font-size: 14px;
    position: relative;
}

#kb-function-panel .kb-function-body {
    height: 100% ;
    max-height: 100% ;
}

h3.pane-title {
    margin: 0;
    position: relative;
    background-color: rgb(224,224,224);
    padding: 3px 5px;
    border: 1px solid #C2C2C2;
    font-size: 16px;
}

#add-link {
    position: absolute;
    top: 4px;
    right: 7px;
    font-size: 0.8em;
}

ul.pane-list {
    margin: 0;
    padding : 2px
}

ul.pane-list li {
    list-style: none;
    padding: 1px;
    margin-left: 5px;
}

/* --- KBase method list styles --*/

.kb-method-list-logo {
    width:  30pt;
    height: 30pt;
    color:  #fff;
    background-color: #607D8B;
    border-style:  solid;
    border-width:  0px;
    border-color:  #555;
    text-align: center;
    display: inline-block;
    padding-top: 6pt;
    font-size: 18pt;
    font-weight: bold;
    text-shadow: -1px 0 #777, 0 1px #777, 1px 0 #777, 0 -1px #777;
    cursor: pointer;
}

.kb-method-list-logo:hover {
	border-width: 5px;
	padding-top: 2.5pt;
}

.kb-method-list-more-div {
    color:#777;
    font-size: 10pt;
    margin: 2px;
    text-align: justify;
}

.kb-method-list-more-div > div:last-child {
	text-align: right;
}

.kb-method-search-clear {
    cursor: pointer;
    border: 1px solid #CECECE;
    border-left: none;
}

/* A function in the function pane */
li.function a {
    text-decoration: none;
    color: rgb(80,130,50);
}
li.function a:visited {
    /* don't recolor */
    color: rgb(80,130,50);
}
/* dataset in data pane */
li.dataset a {
    text-decoration: none;
    color: rgb(130,80,50);
}
li.dataset a:visited {
    /* don't recolor */
    color: rgb(130,80,50);
}


/* dialog box + forms styling */

.dialog-box {
    padding: 20px;
}

.dialog-box ul li {
    padding: 50px 5px;
    border-bottom: 1px solid #AAA;
    font-size: 1.2em;
}

.dialog-box ul li:first-child {
    padding-top: 20px;
}

.dialog-box ul li:last-child {
    border-bottom: none;
}

fieldset {
    margin: 0 0 15px 0;
    border: none;
}

fieldset label {
/*  display: block;
*/  margin: 0 0 3px 0;
    font-weight: bold;
    font-size: 1em;

}

fieldset input[type="text"], fieldset select {
    width: 200px;
}
fieldset input[type="password"], fieldset select {
    width: 200px;
}

/* styling of cells */

div.dataset-cell, div.function-cell {
    width: 90%;
    margin: 3px auto;
    padding: 7px 17px;
    border: 1px solid #ccc;
}
img.dataset-cell{
    margin: 3px auto;
    padding: 0;
}
.function-cell{
    background-image: url("../images/gears.png");
    background-position: right;
    background-repeat: no-repeat;
    #background-color: #f2f2f2;
}
.dataset-cell p, .function-cell p {
    font-size: .875em;
}
.dataset-cell h2, .function-cell h2{
    margin-bottom: 0;
    font-size: 1.1em;
}
.textcell{
    width: 90%;
    margin: 3px auto;
    padding: 5px 17px;
    font-size: 1em;
    height: 1em;
    border: 2px solid #fff;
    color: #111;
}

.textcell:hover{
    border: 2px dotted #ccc;
}

p.textcuepara{
    color: #ccc;
    padding: 0;
    margin: 0;
    height: 1em;
    display: none;
}

div.tools p, div.texttools p{
    margin: 0;
}
div.textarea{
    width: 650px;
    border: none;
    padding: 0;
    height: auto;
    min-height: 1.2em;
    display: none;
}
.tools, .texttools{
    display: none;
}
.tools{
    height: 1em;
    margin-top: .5em;
    margin-left: 10px;
}
.tools a{
    border: 1px solid #018841;
    padding: 2px 4px;
    font-size: 13px;
}

#narrative-header .tools{
    display: block;
    width: 30em;
    position: relative;
    top: -2.0em;
    left: 350px;
}
.texttools img{
    vertical-align: middle;
}
img.remove{
    float: right;
}
.ui-state-highlight{
    background-color: fbfaed;
}
/* ... */

